@@ -1,4 +1,5 @@
 {{$NEXT}}
+   - add support for timer-jobs and suspended-jobs from flowable
 
 0.1257  2020-11-07 13:53:23 CET
    - add option keep_alive for client
